fix profile config name